# full-stack-todo-rust-course

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
backend/rust/axum/lessons/data/: Cargo.toml
backend/rust/axum/lessons/data/src/: lib.rs  main.rs
backend/rust/axum/lessons/data/src/database/: tasks.rs  users.rs
backend/rust/axum/lessons/data/src/routes/: create_task.rs  custom_json_extractor.rs  delete_task.rs  get_one_task.rs  get_tasks.rs  guard.rs  hello_world.rs  mod.rs  partial_update_task.rs  update_tasks.rs  users.rs  validate_with_serde.rs
backend/rust/axum/lessons/data/src/utils/: app_error.rs  jwt.rs  mod.rs
backend/rust/axum/lessons/routing/: Cargo.toml
backend/rust/axum/lessons/routing/src/: lib.rs  main.rs
backend/rust/axum/lessons/routing/src/routes/: always_errors.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs
backend/rust/axum/project_solution/: .env_example  Cargo.toml  Dockerfile  README.md
backend/rust/axum/project_solution/src/: app_state.rs  config.rs  lib.rs  main.rs  router.rs
backend/rust/axum/project_solution/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
backend/rust/axum/project_solution/src/db/: mod.rs  prelude.rs  tasks.rs  users.rs
backend/rust/axum/project_solution/src/middleware/: mod.rs  require_authentication.rs
backend/rust/axum/project_solution/src/queries/: mod.rs  task_queries.rs  user_queries.rs
backend/rust/axum/project_solution/src/routes/: hello_world.rs  middleware.rs  mod.rs  users.rs
backend/rust/axum/project_solution/src/routes/tasks/: mod.rs  (+7 more)
backend/rust/axum/project_solution/src/utilities/: app_error.rs  app_state.rs  errors.rs  hash.rs  hash_password.rs  jwt.rs  mod.rs  token_wrapper.rs
backend/rust/learning_axum/: Cargo.toml  README.md
backend/rust/learning_axum/src/: config.rs  lib.rs  main.rs
backend/rust/learning_axum/src/db/: models.rs  schema.rs  tasks.rs  users.rs
backend/rust/learning_axum/src/routes/: middleware.rs  mod.rs  tasks.rs  users.rs
backend/rust/learning_axum/src/routes/tasks/: routes.rs
backend/rust/learning_axum/src/utilities/: errors.rs  hash_password.rs  mod.rs
frontend/rust/yew/: Cargo.toml  Dockerfile  README.md  index.html
frontend/rust/yew/lessons/bootstrap_css/: Cargo.toml  index.html
frontend/rust/yew/lessons/bootstrap_css/src/: lib.rs  text_form_field.rs
frontend/rust/yew/lessons/callbacks/: Cargo.toml
frontend/rust/yew/lessons/callbacks/src/: lib.rs
frontend/rust/yew/lessons/enum_properties/: index.html
frontend/rust/yew/lessons/enum_properties/src/: lib.rs
frontend/rust/yew/lessons/handling_form_submit_events/: index.html
frontend/rust/yew/lessons/handling_form_submit_events/src/: lib.rs  main.css
frontend/rust/yew/lessons/handling_static_files/: index.html
frontend/rust/yew/lessons/handling_static_files/src/: lib.rs
frontend/rust/yew/lessons/hello_world_in_rust/: Cargo.toml
frontend/rust/yew/lessons/hello_world_in_yew/: Cargo.toml
frontend/rust/yew/lessons/html_conditionals/src/: lib.rs
frontend/rust/yew/lessons/html_loops/src/: lib.rs
frontend/rust/yew/lessons/http_get_requests/: Cargo.toml
frontend/rust/yew/lessons/http_get_requests/src/: lib.rs  login.rs  router.rs
frontend/rust/yew/lessons/http_post_requests/src/: display.rs  lib.rs  store.rs
frontend/rust/yew/lessons/inline_styles/src/: lib.rs
frontend/rust/yew/lessons/introduction_to_stylist/src/: lib.rs
frontend/rust/yew/lessons/passing_properties_into_components/src/: lib.rs
frontend/rust/yew/lessons/persistant_state/src/: display.rs
frontend/rust/yew/lessons/separate_css_file/src/: lib.rs
frontend/rust/yew/lessons/set_timeout/src/: login.rs
frontend/rust/yew/lessons/setting_up_yew_router/src/: lib.rs  main.rs
frontend/rust/yew/lessons/setting_up_yewdux/: Cargo.toml  README.md
frontend/rust/yew/lessons/setting_up_yewdux/src/: counter.rs  display_count.rs  increment.rs  increment_count.rs  lib.rs  router.rs
frontend/rust/yew/lessons/simplifying_complicated_state_updates/: Cargo.toml
frontend/rust/yew/lessons/struct_lifecycle_methods/src/: lib.rs
frontend/rust/yew/lessons/struct_messages/src/: lib.rs
frontend/rust/yew/lessons/use_effect_hook/src/: lib.rs
frontend/rust/yew/lessons/using_yewdux_to_store_form_data/: Cargo.toml  README.md
frontend/rust/yew/lessons/using_yewdux_to_store_form_data/src/: auth_form.rs  display.rs  display_auth.rs  lib.rs  login.rs  store.rs
frontend/rust/yew/lessons/yewdux_functional/: Cargo.toml  README.md
frontend/rust/yew/lessons/yewdux_functional/src/: auth_view.rs  display.rs  display_auth.rs  lib.rs  login.rs  login_form.rs  store.rs
frontend/rust/yew/solution/: Cargo.toml  Dockerfile  index.html
frontend/rust/yew/solution/src/: api.rs  lib.rs  main.rs  router.rs  store.rs
frontend/rust/yew/solution/src/api/: api_errors.rs  mod.rs  patch_task.rs
frontend/rust/yew/solution/src/components/: mod.rs
frontend/rust/yew/solution/src/pages/: add_task.rs  create_account.rs  edit_task.rs  home.rs  login.rs  mod.rs  one_task.rs
frontend/rust/yew/src/: lib.rs  main.rs  router.rs
frontend/rust/yew/src/components/: mod.rs  navbar.rs
frontend/rust/yew/src/components/atom/: link_wrapper.rs  mod.rs  text_input_wrapper.rs
frontend/rust/yew/src/store/: bounce.rs  mod.rs  yewdux.rs
frontend/rust/yew/src/views/: home.rs  home_with_bounce.rs  home_with_yewdux.rs  login.rs  mod.rs
frontend/rust/yew/todo_project/: Cargo.toml  Dockerfile  index.html
frontend/rust/yew/todo_project/src/: lib.rs  main.css  main.rs  router.rs
frontend/rust/yew/todo_project/src/api/: api_client.rs  api_error.rs  api_settings.json  mod.rs
frontend/rust/yew/todo_project/src/components/: mod.rs
frontend/rust/yew/todo_project/src/styles/: color.rs  mod.rs  styles.rs
lessons/using_yewdux_to_store_form_data/: Cargo.toml
lessons/using_yewdux_to_store_form_data/src/: login.rs
(+208 files in other folders)
