[package]
name = "learning_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
dotenvy = "0.15.3"
dotenvy_macro = "0.15.1"
eyre = "0.6.8"
jsonwebtoken = "8.1.1"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio", "runtime-tokio-rustls", "debug-print", "sqlx"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
