[package]
name = "yew_todo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
stylist = { version = "0.10", features = ["yew_integration"] }
yew-router = "0.16.0"
eyre = "0.6.7"
gloo = "0.6"
web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
yew-agent = "0.1.0"
yewdux = "0.7"
bounce = "0.2.0"
reqwasm = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen-futures = "0.4.29"