[package]
name = "solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
stylist = { version = "0.10.0", features = ["yew"] }
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["HtmlInputElement"] }
gloo = "0.6.1"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.30"
serde = "1.0.136"
serde_json = "1.0.79"