[package]
name = "todo_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = {version = "0.10.1", features = ["yew", "macros"]}
yew-router = "0.16.0"
yewdux = "0.8.2"
getrandom = { version = "0.2.7", features = ["js"] }
web-sys = {version = "0.3.60", features = ["HtmlInputElement"]}
gloo = "0.8.0"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
lazy_static = "1.4.0"
serde = "1.0.145"
serde_json = "1.0.85"
chrono = "0.4.22"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
